# simdb-fdupes

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  filelist.c  filelist.h  group.c  group.h  main.c
tests/: CMakeLists.txt  filelist.c  group.c
